<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootview">

    <android.support.constraint.Guideline
        android:id="@+id/first_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/smileyview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/smiley"
        app:layout_constraintBottom_toTopOf="@+id/first_part"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="100dp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_part">

        <ImageView
            android:id="@+id/addview"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ic_note_add_black"
            android:contentDescription="@string/add"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/historicalview"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_history_black"
            android:contentDescription="@string/historical" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>